<resources>
    <string name="app_name" translatable="false">WellthyTest</string>

    <string name="no_internet_connection">Check your Internet Connection and try again</string>
    <string name="no_location_permission">Enable location permission to get weather report</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">This app requires current location details to get weather report</string>
    <string name="enable">Enable</string>

    <string name="language">Language</string>
    <string name="language_english">English</string>
    <string name="language_hindi">हिन्दी</string>

    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <string name="alert_dialog_title_city_name">City Name</string>
    <string name="alert_dialog_message_city_name">Not able to get city name, please try again</string>
</resources>