<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <TextView
            android:id="@+id/themeLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_toStartOf="@id/swTheme"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/themeDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_toEndOf="@id/swTheme"/>

    </RelativeLayout>

</RelativeLayout>